--- a/first.html
+++ b/first.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OPay - Beyond Banking</title>
+    <title>Smooth banking</title>
     <link rel="stylesheet" href="first.css">
 </head>
 <body>
